# sixth

./: .gitignore  flake.nix
ai/: README.md  intro.md  knowledge.md  probsolv.md  search.md
ai/codes/: cryptsolver.py  search_farmer_gui.py
ai/codes/1_lab/: 10_largest.py  11_freq.py  12_dict_sum.py  13_swap_cases.py  15_person.py  16_vehicle.py  17_bank.py  18_shape.py  19_car.py  1_oddeven.py  20_graph.py  2_percentage.py  3_arithmatic.py  4_primes.py  5_marks.py  6_factorial.py  7_word_count.py  9_sum_list.py  circle.py  dsa.py  oddeven.py  recursion.py  sort_list.py
ai/codes/2_lab/: astar.py  gui8.py  puzzle_8.py
ai/codes/extras/: cryptsolver.py  search_farmer.py
ai/ml/: classification.ipynb  knnmodel.pkl  regression.ipynb  test.py
ai/ml/.ipynb_checkpoints/: classification-checkpoint.ipynb
ai/nlp/: nltk.ipynb
ai/nn/: Untitled.ipynb  Untitled1.ipynb  helpers.ipynb  iris.ipynb  iris_model  irisnn.ipynb  nntorch.ipynb  torch2.ipynb  vectorized.ipynb
ai/nn/conv/: hello.py  pyproject.toml
ai/nn/conv/image-classifier/: CustomCNN.ipynb  customcnn.ipynb  model.py
ai/projects/classification_supervised/: feature_extration.py  gui.py  guii.py  guiii.py  kidney.ipynb  model.pkl
ai/projects/tsp/: tsp.ipynb
ai/topics/: cryptarith.md  foundations-of-ai.md  history-of-ai.md
dbms/: README.md  data-models.md  dbms-fq.org  dbms-sql-ra.org  intro.md
embed/: README.md  intro.md
mini/: ideas.md  refs.md
os/: README.md  intro.md  procman.md
os/codes/: pthread_example.c
os/lab/schedule/: fcfs  fsfs.c  sjfs  sjfs.c
(+7 files in other folders)
